<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<com.github.mikephil.charting.charts.LineChart
		android:id="@+id/chart"
		android:layout_width="match_parent"
		android:layout_height="300dp"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@id/chart">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintTop_toBottomOf="@id/chart">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/height_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="100dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/chart">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_height"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/height"
					android:inputType="number" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/angle_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="100dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/height_l">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_angle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/angle"

					android:inputType="number" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/speed_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="100dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/angle_l">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_speed"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/speed"

					android:inputType="number" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/size_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="100dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/speed_l">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_size"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"

					android:hint="@string/size"
					android:inputType="number" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/weight_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="100dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/size_l">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_weight"
					android:layout_width="match_parent"
					android:layout_height="61dp"
					android:hint="@string/weight"
					android:inputType="number" />
			</com.google.android.material.textfield.TextInputLayout>
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/step_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/weight_l">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_step"
					android:layout_width="match_parent"
					android:layout_height="61dp"
					android:hint="@string/step"
					android:inputType="numberDecimal|numberSigned" />
			</com.google.android.material.textfield.TextInputLayout>


		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			android:orientation="vertical"
			app:layout_constraintTop_toBottomOf="@id/chart">

			<Button
				android:id="@+id/addGraph"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/addGraph" />

			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TableLayout
					android:id="@+id/table"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:stretchColumns="1">

					<TableRow>

						<TextView
							android:padding="3dp"
							android:text="@string/testnum" />

						<TextView
							android:padding="3dp"
							android:text="@string/time_step" />

						<TextView
							android:padding="3dp"
							android:text="@string/distance" />

						<TextView
							android:padding="3dp"
							android:text="@string/max_height" />

						<TextView
							android:padding="3dp"
							android:text="@string/end_speed" />

					</TableRow>
				</TableLayout>

			</ScrollView>
		</LinearLayout>
	</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>